# art

./: .gitignore  Cargo.toml  README.md  cargo.toml
src/: lib.rs
src/back/: consts.rs  context.rs  define.rs  error.rs  graph_plan.rs  lib.rs  middles.rs  runtime.rs
src/core/: context.rs  engine.rs  engine_serde_ext.rs  env.rs  error.rs  hook.rs  mod.rs  node.rs  output.rs  plan.rs  pool.rs  service.rs  service_json_ext.rs
src/plan/: dag.rs  graph.rs  mod.rs
src/service/: mod.rs
src/service/agent/: fixed_plan.rs  mod.rs  workflow.rs
src/service/custom/: end.rs  function.rs  mod.rs  start.rs
src/service/ext/: mod.rs  obj.rs  service_loader.rs
src/service/flow/: batch.rs  end.rs  mod.rs  select.rs  start.rs  var.rs
src/service/mcp/: mcp_error.rs  mcp_test.rs  mod.rs  stdio_transport.rs  transport.rs
src/utils/: string.rs
tests/: services_test.rs
